--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,554 @@
+:root {
+  --playground-border-size: 1px;
+  --playground-border-color: rgba(0, 0, 0, 1);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Source Serif 4', sans-serif;
+}
+
+html {
+  min-height: 100%;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-size: 80%;
+  background-attachment: fixed;
+  min-height: 100%;
+  scroll-behavior: smooth;
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background-image: url("/public/images/bg-light.webp");
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: url("/public/images/bg-dark.webp");
+    background-color: black;
+    filter: invert(95%) hue-rotate(180deg);
+  }
+
+  img, video, iframe {
+    filter: invert(95%) hue-rotate(180deg);
+  }
+
+  .navigation-menu-bars img {
+    filter: invert(0);
+  }
+}
+
+/* General styling.  */
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+input[type] {
+  outline: none;
+  border: var(--playground-border-size) solid var(--playground-border-color);
+  height: 25px;
+  padding: .5rem;
+  background-color: transparent;
+}
+
+select {
+  outline: none;
+  border: var(--playground-border-size) solid var(--playground-border-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+}
+
+table {
+  width: 100%;
+  margin-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  border-spacing: 0;
+  border-collapse: collapse;
+  border: var(--playground-border-size) solid var(--playground-border-color);
+}
+
+table thead tr td,
+table tbody tr td {
+  height: 30px;
+}
+
+table thead tr td {
+  padding-left: 1rem;
+  font-weight: bolder;
+}
+
+table tbody tr td input {
+  padding-left: 1rem !important;
+  width: 100% !important;
+  height: 30px !important;
+  border: none !important;
+}
+
+table thead tr,
+table tbody tr:not(:last-child) td {
+  border-bottom: var(--playground-border-size) solid var(--playground-border-color);
+}
+
+table thead tr td:not(:last-child),
+table tbody tr td:not(:last-child) {
+  border-right: var(--playground-border-size) solid var(--playground-border-color);
+}
+
+/* Playground structure.  */
+
+.playground {
+  width: 90%;
+  min-height: 100%;
+  margin: auto;
+  display: block;
+}
+
+/* Title bar.  */
+
+.title-bar {
+  position: relative;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title-bar-options .logo {
+  background-color: black;
+  color: white;
+  padding: .1rem .5rem .1rem .5rem;
+  font-family: 'Source Serif 4', sans-serif;
+  font-weight: 700;
+}
+
+.title-bar-options .logo span {
+  font-family: 'Source Serif 4', sans-serif;
+  font-weight: 400;
+}
+
+.title-bar-options ul li {
+  display: inline;
+  list-style: none;
+  padding-right: 1rem;
+}
+
+.title-bar-window-name {
+  width: 200px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.title-bar-links a {
+  font-size: 22px;
+}
+
+/* Request bar */
+
+.request-bar form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.request-bar #http-request-method-picker {
+  text-align: center;
+  background-color: transparent;
+  height: 30px;
+  width: 100px;
+}
+
+.request-bar #http-request-target {
+  flex-grow: 1;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 30px;
+  font-weight: bold;
+}
+
+.request-bar #http-request-send-button {
+  background-color: black;
+  width: 100px;
+  color: white;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  height: 30px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+/* Workbench.  */
+
+.workbench {
+  display: flex;
+  margin-top: 1rem;
+  border: var(--playground-border-size) solid var(--playground-border-color);
+  min-height: 500px;
+  max-height: calc(100vh - 150px);
+  height: calc(100vh - 150px);
+  margin-bottom: 2rem;
+}
+
+.workbench .request-response-panel {
+  position: relative;
+  height: 100%;
+  width: 50%;
+}
+
+.workbench .response-panel {
+  height: 100%;
+  width: 50%;
+  border-left: var(--playground-border-size) solid var(--playground-border-color);
+}
+
+.workbench .tabs-panel {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-bottom: var(--playground-border-size) solid var(--playground-border-color);
+}
+
+.workbench .tabs-panel .tab.active {
+  text-decoration: underline;
+}
+
+.workbench .tabs-panel .tab {
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  list-style: none;
+  cursor: default;
+}
+
+.workbench .tabs-panel ul li:not(:last-child) {
+  padding-right: 1rem;
+}
+
+.workbench .work-panel {
+  height: calc(100% - 40px);
+  padding: 1rem;
+}
+
+.workbench .work-panel .work-panel-tab {
+  display: none;
+}
+
+.workbench .work-panel .work-panel-tab.active {
+  display: block;
+}
+
+.workbench .work-panel .work-panel-tab .workspace-tab-content {
+  position: relative;
+  height: 100%;
+  scrollbar-color: transparent transparent;
+  scrollbar-width: none;
+  overflow: auto;
+}
+
+.workbench .work-panel .work-panel-tab .workspace-tab-content h3 {
+  text-align: center;
+  font-weight: bolder;
+  border-top: 2px solid black;
+  border-bottom: 1px solid black;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: .5rem .5rem;
+}
+
+.workbench .work-panel .work-panel-tab .workspace-tab-content .centered-label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.workbench .work-panel .work-panel-tab .workspace-tab-content .centered-label p {
+  text-align: center;
+  font-family: "Inconsolata", system-ui;
+  font-size: 13px;
+}
+
+.workbench .work-panel .work-panel-tab .workspace-tab-content .disable {
+  display: none;
+}
+
+/* Workbench request section.  */
+
+.workbench .request-panel .work-panel {
+  background-size: 20px 20px;
+  background-image: radial-gradient(rgba(0, 0, 0, 0.2) 1px, transparent 1px), radial-gradient(rgba(0, 0, 0, 0.2) 1px, transparent 1px);
+}
+
+.workbench .request-panel .work-panel table {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.workbench .request-panel .box-decoration {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  bottom: 1rem;
+  z-index: -1;
+}
+
+.workbench .request-panel .box-decoration.left {
+  left: 1rem;
+}
+
+.workbench .request-panel .box-decoration.right {
+  right: 1rem;
+}
+
+.workbench .request-panel .box-decoration div.center {
+  width: 25%;
+  height: 25%;
+  background-color: black;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.workbench .request-panel .box-decoration .dot {
+  width: 30%;
+  height: 30%;
+  border-color: black;
+  border-width: 2px;
+  border-style: solid;
+  position: absolute;
+}
+
+.workbench .request-panel .box-decoration .dot.top-left {
+  top: 0;
+  left: 0;
+  border-bottom: none;
+  border-right: none;
+}
+
+.workbench .request-panel .box-decoration .dot.top-right {
+  top: 0;
+  right: 0;
+  border-bottom: none;
+  border-left: none;
+}
+
+.workbench .request-panel .box-decoration .dot.bottom-left {
+  bottom: 0;
+  left: 0;
+  border-top: none;
+  border-right: none;
+}
+
+.workbench .request-panel .box-decoration .dot.bottom-right {
+  bottom: 0;
+  right: 0;
+  border-top: none;
+  border-left: none;
+}
+
+/* Response styles.  */
+
+.workbench .response-panel .work-panel.with-diagonal {
+  background-size: 20px 20px;
+  background-image: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.1) 0, rgba(0, 0, 0, 0.1) 1px, transparent 0, transparent 50%);
+}
+
+.workbench .response-panel .response-body {
+  position: relative;
+  background-size: 25px 25px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.06) 1px, transparent 1px),
+  linear-gradient(to right, rgba(0, 0, 0, 0.06) 1px, rgba(255, 255, 255, 0) 1px);
+  height: 100%;
+  width: 100%;
+  overflow: unset;
+  border: var(--playground-border-size) solid var(--playground-border-color);
+  padding: 1.7rem 1.9rem 1rem 1rem;
+}
+
+.workbench .response-panel .response-body .htmx-indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.workbench .response-panel .response-body .htmx-indicator .spinner {
+  width: 30px;
+  height: 30px;
+  border: 2px solid black;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  display: block;
+}
+
+.workbench .response-panel .response-body .htmx-request .htmx-indicator {
+  opacity: 1;
+  display: block;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.workbench .response-panel .response-body > pre {
+  overflow: auto;
+  height: 100%;
+  scrollbar-color: transparent transparent;
+  scrollbar-width: none;
+}
+
+.workbench .response-panel .response-body * {
+  font-family: "Inconsolata", system-ui;
+  font-size: 14px;
+}
+
+.workbench .response-panel .response-body #response-status,
+.workbench .response-panel .response-body #response-stats {
+  display: none;
+}
+
+.workbench .response-panel .response-body #response-status.active,
+.workbench .response-panel .response-body #response-stats.active {
+  display: block;
+}
+
+.workbench .response-panel .response-body #response-status {
+  position: absolute;
+  top: .5rem;
+  right: 1rem;
+}
+
+.workbench .response-panel .response-body #response-status *,
+.workbench .response-panel .response-body #response-stats * {
+  font-size: 16px;
+}
+
+.workbench .response-panel .response-body #response-stats {
+  position: absolute;
+  bottom: 1rem;
+  right: .5rem;
+  writing-mode: vertical-lr;
+  -ms-writing-mode: lr;
+  -webkit-writing-mode: vertical-lr;
+}
+
+.workbench .response-panel .response-body #response-stats p {
+  display: inline;
+  margin: .5rem;
+}
+
+.workbench .response-panel .response-body .decoration {
+  position: absolute;
+  background-color: transparent;
+  z-index: -1;
+  border-radius: 4px;
+}
+
+.workbench .response-panel .response-body .decoration.top-right {
+  right: -4px;
+  top: -4px;
+  width: 25%;
+  height: 50%;
+  border-top: 4px solid black;
+  border-right: 4px solid black;
+}
+
+.workbench .response-panel .response-body .decoration.bottom-left {
+  bottom: -4px;
+  left: -4px;
+  width: 15%;
+  height: 70%;
+  border-bottom: 4px solid black;
+  border-left: 4px solid black;
+}
+
+@media screen and (max-width: 1120px) {
+  .workbench {
+    flex-direction: column;
+    max-height: initial;
+    height: auto;
+  }
+
+  .workbench .request-response-panel {
+    width: 100%;
+  }
+
+  .workbench .work-panel .work-panel-tab .workspace-tab-content {
+    position: initial;
+  }
+
+  .workbench .request-response-panel .tabs-panel {
+    text-align: center;
+  }
+
+  .workbench .request-panel .work-panel {
+    min-height: 300px;
+  }
+
+  .workbench .response-panel .work-panel {
+    min-height: 500px;
+  }
+
+  .workbench .response-panel .response-body {
+    height: auto;
+  }
+
+  .workbench .response-panel .response-body > pre {
+    min-height: 500px;
+    max-height: calc(60vh - 150px);
+  }
+
+  .workbench .response-panel {
+    border: var(--playground-border-size) solid var(--playground-border-color);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .title-bar-window-name {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  #http-request-form {
+    flex-direction: column;
+    row-gap: .3rem;
+  }
+
+  #http-request-method-picker {
+    width: 100% !important;
+  }
+
+  #http-request-target {
+    margin: 0 !important;
+  }
+
+  #http-request-send-button {
+    width: 100% !important;
+  }
 }
