--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,6 +63,10 @@ input[type] {
   background-color: transparent;
 }
 
+button:disabled {
+  background-color: gray;
+}
+
 select {
   outline: none;
   border: var(--playground-border-size) solid var(--playground-border-color);
@@ -114,14 +118,15 @@ table tbody tr td:not(:last-child) {
 
 .playground {
   width: 90%;
-  min-height: 100%;
-  margin: auto;
+  height: calc(100vh - 6rem);
+  min-height: 600px;
   display: block;
+  margin: auto auto 6rem;
 }
 
 /* Title bar.  */
 
-.title-bar {
+.playground-title-bar {
   position: relative;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -130,7 +135,7 @@ table tbody tr td:not(:last-child) {
   justify-content: space-between;
 }
 
-.title-bar-options .logo {
+.playground-title-bar .title-bar-options .logo {
   background-color: black;
   color: white;
   padding: .1rem .5rem .1rem .5rem;
@@ -138,18 +143,18 @@ table tbody tr td:not(:last-child) {
   font-weight: 700;
 }
 
-.title-bar-options .logo span {
+.playground-title-bar .title-bar-options .logo span {
   font-family: 'Source Serif 4', sans-serif;
   font-weight: 400;
 }
 
-.title-bar-options ul li {
+.playground-title-bar .title-bar-options ul li {
   display: inline;
   list-style: none;
   padding-right: 1rem;
 }
 
-.title-bar-window-name {
+.playground-title-bar .title-bar-window-name {
   width: 200px;
   text-align: center;
   position: absolute;
@@ -158,8 +163,200 @@ table tbody tr td:not(:last-child) {
   margin: auto;
 }
 
-.title-bar-links a {
+.playground-title-bar .title-bar-links a {
   font-size: 22px;
+}
+
+/* Playground content.  */
+
+.playground-content {
+  min-width: 100%;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+  display: flex;
+}
+
+/* Collections files.  */
+
+.playground-collection-container {
+  border: none;
+  width: 0;
+  min-width: 0;
+  max-width: 0;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.playground-collection-container .content {
+  overflow-y: hidden;
+  padding: 0;
+}
+
+.playground-collection-container .actions {
+  position: absolute;
+  bottom: 5.4rem;
+  left: calc(-8rem + 1px);
+  rotate: -90deg;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.playground-collection-container .actions button {
+  background-color: transparent;
+  user-select: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  height: 25px;
+  appearance: none;
+  padding: 0 1.5rem;
+}
+
+.playground-collection-container .actions button:not(:first-child) {
+  border-left: 1px solid black;
+}
+
+.playground-collection-container.open {
+  width: 300px;
+  min-width: 300px;
+  max-width: 300px;
+  border: 1px solid black;
+  margin-right: 1rem;
+}
+
+.playground-collection-container.open .content {
+  padding: 1rem;
+  max-height: 100%;
+  overflow: auto;
+}
+
+.playground-collection-container.open .actions {
+  bottom: 5.3rem;
+  left: -8rem;
+}
+
+.playground-collection-container .content .no-coll {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+  user-select: none;
+  pointer-events: none;
+  cursor: default;
+}
+
+.playground-collection-container .content header {
+  margin-bottom: 1rem;
+}
+
+.playground-collection-container .content .item {
+  cursor: default;
+  user-select: none;
+}
+
+.playground-collection-container .content .item:not(.folder).selected .name::before {
+  content: "\E3D2";
+  font-weight: bolder;
+}
+
+.playground-collection-container .content .item span.name {
+  padding: .1rem 0;
+}
+
+.playground-collection-container .content .item .name::before {
+  font-family: "Phosphor";
+  padding-right: .7rem;
+}
+
+.playground-collection-container .content .item > .name::before {
+  content: "\E6AC";
+}
+
+.playground-collection-container .content .item.folder > span.name::before {
+  content: "\E25A";
+}
+
+.playground-collection-container .content .item.folder.open > .name::before {
+  content: "\E256";
+}
+
+.playground-collection-container .content .item {
+  min-width: 200px;
+}
+
+.playground-collection-container .content .item.folder {
+  height: 1.5rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.playground-collection-container .content .item.folder.open {
+  height: auto;
+}
+
+.playground-collection-container .content .item.folder.open::before {
+  content: "";
+  position: absolute;
+  top: 1.2rem;
+  border-left: 1px dashed rgba(0, 0, 0, 0.2);
+  height: calc(100% - 1.2rem);
+}
+
+.playground-collection-container .content .item.folder .name {
+  padding-left: .2rem;
+}
+
+.playground-collection-container .content .item > span.name {
+  display: inline-block;
+  width: 100%;
+}
+
+.playground-collection-container .content .item > span.name:hover {
+  background-color: rgba(0, 0, 0, .05);
+}
+
+.playground-collection-container .content .item .item {
+  padding-left: .8rem;
+}
+
+.playground-content .canvas {
+  width: 100%;
+  height: calc(100% - 4.6rem);
+  min-height: calc(100% - 4.6rem);
+  max-height: calc(100% - 4.6rem);
+}
+
+.playground-content .canvas .request-name {
+  padding: .5rem 0;
+  font-weight: bolder;
+  pointer-events: none;
+  user-select: none;
+}
+
+.playground-content .canvas .request-name .item {
+  font-size: 20px;
+  position: relative;
+  padding-left: 2rem;
+}
+
+.playground-content .canvas .request-name .item::before {
+  content: "\E13A";
+  font-family: "Phosphor";
+  position: absolute;
+  top: .3rem;
+  left: .5rem;
+}
+
+.playground-content .canvas .request-name > .item:first-child {
+  padding-left: 0;
+}
+
+.playground-content .canvas .request-name > .item:first-child::before {
+  display: none;
 }
 
 /* Request bar */
@@ -199,12 +396,12 @@ table tbody tr td:not(:last-child) {
 /* Workbench.  */
 
 .workbench {
+  max-width: 100%;
   display: flex;
-  margin-top: 1rem;
   border: var(--playground-border-size) solid var(--playground-border-color);
-  min-height: 500px;
-  max-height: calc(100vh - 150px);
-  height: calc(100vh - 150px);
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
   margin-bottom: 2rem;
 }
 
@@ -258,6 +455,8 @@ table tbody tr td:not(:last-child) {
 .workbench .work-panel .work-panel-tab .workspace-tab-content {
   position: relative;
   height: 100%;
+  min-height: 100%;
+  max-height: 100%;
   scrollbar-color: transparent transparent;
   scrollbar-width: none;
   overflow: auto;
@@ -270,6 +469,7 @@ table tbody tr td:not(:last-child) {
   border-bottom: 1px solid black;
   background-color: rgba(255, 255, 255, 0.5);
   padding: .5rem .5rem;
+  margin-bottom: 1rem;
 }
 
 .workbench .work-panel .work-panel-tab .workspace-tab-content .centered-label {
@@ -306,6 +506,16 @@ table tbody tr td:not(:last-child) {
   height: 70px;
   bottom: 1rem;
   z-index: -1;
+}
+
+.workbench .request-panel .http-request-body-textarea {
+  width: 100%;
+  min-height: calc(100% - 130px - 1rem);
+  background-color: rgba(255, 255, 255, 0.7);
+  resize: none;
+  padding: 1rem;
+  font-family: "Inconsolata", system-ui;
+  font-size: 16px;
 }
 
 .workbench .request-panel .box-decoration.left {
@@ -378,6 +588,8 @@ table tbody tr td:not(:last-child) {
   linear-gradient(to right, rgba(0, 0, 0, 0.06) 1px, rgba(255, 255, 255, 0) 1px);
   height: 100%;
   width: 100%;
+  max-width: 100%;
+  min-width: 100%;
   overflow: unset;
   border: var(--playground-border-size) solid var(--playground-border-color);
   padding: 1.7rem 1.9rem 1rem 1rem;
@@ -416,10 +628,19 @@ table tbody tr td:not(:last-child) {
 }
 
 .workbench .response-panel .response-body > pre {
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
   overflow: auto;
   height: 100%;
   scrollbar-color: transparent transparent;
   scrollbar-width: none;
+}
+
+.workbench .response-panel .response-body > pre code {
+  display: inline-block;
+  width: 100%;
+  max-width: 0;
 }
 
 .workbench .response-panel .response-body * {
@@ -487,6 +708,41 @@ table tbody tr td:not(:last-child) {
   border-left: 4px solid black;
 }
 
+@media screen and (max-width: 1420px) {
+  .playground-content {
+    flex-wrap: wrap;
+  }
+
+  .playground-collection-container .actions {
+    rotate: 0deg;
+    left: 0;
+    top: 0 !important;
+    height: 27px;
+    bottom: unset;
+    justify-content: space-between;
+  }
+
+  .playground-collection-container.open {
+    width: 100%;
+    min-width: 100%;
+    max-height: 100vh;
+    margin: 2rem 0 0;
+  }
+
+  .playground-collection-container.open .actions {
+    left: -1px;
+    top: calc(-2rem - 1px) !important;
+  }
+
+  .playground-content .canvas {
+    margin-top: 2rem;
+  }
+
+  .playground-content:has(.collection-files.open) .canvas {
+    margin-top: .4rem !important;
+  }
+}
+
 @media screen and (max-width: 1120px) {
   .workbench {
     flex-direction: column;
@@ -507,7 +763,11 @@ table tbody tr td:not(:last-child) {
   }
 
   .workbench .request-panel .work-panel {
-    min-height: 300px;
+    min-height: 450px;
+  }
+
+  .workbench .request-panel .http-request-body-textarea {
+    min-height: 280px !important;
   }
 
   .workbench .response-panel .work-panel {
@@ -551,4 +811,41 @@ table tbody tr td:not(:last-child) {
   #http-request-send-button {
     width: 100% !important;
   }
+}
+
+dialog {
+  width: 40ch;
+  margin: auto;
+  border: 1px solid black;
+  padding: 1rem;
+}
+
+dialog form {
+  padding-top: 1rem;
+  display: flex;
+  gap: .5rem;
+  flex-direction: column;
+}
+
+dialog button {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  height: 30px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+dialog form button:last-child {
+  background-color: transparent;
+  color: black;
+  border: 1px solid black;
+}
+
+
+input[type="file"] {
+  border: none;
+  height: 40px;
 }
