--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,11 @@
   --playground-border-color: rgba(0, 0, 0, 1);
 }
 
+::selection, mark {
+  background-color: black;
+  color: white;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -28,7 +33,28 @@ body {
   }
 }
 
+body::-webkit-scrollbar {
+  width: .6em;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 5px;
+}
+
 @media (prefers-color-scheme: dark) {
+  body::-webkit-scrollbar-track {
+    background-color: black;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    background-color: white;
+  }
+
   body {
     background-image: url("/public/images/bg-dark.webp");
     background-color: black;
