--- a/website.templ
+++ b/website.templ
@@ -71,8 +71,8 @@ templ layout(collsrc string) {
     {! templ.Raw(collsrc) }
   }
 
-  <script src="/playground/engine.js"></script>
-  <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+  <script defer src="/playground/engine.js"></script>
+  <script defer src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
   </body>
   </html>
 }
