Add Open Graph protocol metadata.
Signed-off-by: Jeremy Fonseca <fontseca.dev@outlook.com>

--- a/website.templ
+++ b/website.templ
@@ -40,7 +40,12 @@ templ layout(collsrc string) {
     <link rel="icon" type="image/png" sizes="16x16" href="/public/icons/favicon-16x16.png"/>
     <link rel="manifest" href="/public/icons/site.webmanifest"/>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <title>fontseca.dev — playground</title>
+    <title>playground — fontseca.dev</title>
+    <link rel="canonical" href="https://fontseca.dev/playground/" />
+    <meta name="description" content="A web-based HTTP client to test APIs I've worked on or any other third-party public API." />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A web-based HTTP client to test APIs I've worked on or any other third-party public API." />
+    <meta property="og:url" content="https://fontseca.dev/playground" />
   </head>
   <body hx-on:keyup="SubmitRequest(event)">
     <div class="playground">
